# --------------------------------------------------------------
# Customizations for serial examples
# --------------------------------------------------------------

# CMake initialization: No customizations
# Build parameters: No customizations
# Build requirements: No customizations

# --------------------------------------------------------------
# Build targets
# --------------------------------------------------------------

# curvature-driven motion
add_subdirectory(curvature_driven_motion)

# fast marching method example
add_subdirector(fast_marching_method)

# grid management example
add_subdirectory(grid_management)

# reinitialization example
add_subdirectory(reinitialization)
